--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
 </head>
 <body>
   
-  <div id="app"></div>
+  <div style="position: absolute; width: 100%; height: 100%;">
+    <div class="container flex fullheight">
+      <div class="row">
+        <div class="col bg-primary text-light">
+          Hello
+        </div>
+        <div class="col mobile-6 bg-secondary text-warning d-flex justify-center align-center">
+          Hello
+        </div>
+        <div class="col bg-warning text-secondary">
+          Hii
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div id="app"></div> -->
+
 
 </body>
 </html>
